src/test/ui/static/issue-18118-2.stderr
error[E0013]: constants cannot refer to statics
  --> $DIR/issue-18118-2.rs:4:10
   |
LL |         &p
   |          ^
   |
   = help: consider extracting the value of the `static` to a `const`, and referring to that

error: aborting due to previous error

For more information about this error, try `rustc --explain E0013`.
